Fixed small bugs in DataScraping, no major changes

--- a/Scripts/DataScraping.ipynb
+++ b/Scripts/DataScraping.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
     "        #print(i)\n",
     "        j=0\n",
     "        while(j<len(procList)):\n",
-    "            commonProcs = compareProcs2(commonProcs,studentList[i][1],procList[j])\n",
+    "            commonProcs = compareProcs(commonProcs,studentList[i][1],procList[j])\n",
     "            j+=1\n",
     "        commonProcs['StudentID'] = studentList[i][0]\n",
     "        finalList.append(commonProcs)\n",
@@ -342,6 +342,41 @@
     "    outData = pd.DataFrame(entryList)\n",
     "    outData.to_csv(outCSV,index=False)\n",
     "    \n",
+    "#compare list of observables only\n",
+    "def compareProcs(commonProcs,stu,proc):\n",
+    "    list1 = []\n",
+    "    list2 = []\n",
+    "    procLen = proc.count(';') + 1\n",
+    "    #print(proc)\n",
+    "    #print(procLen)\n",
+    "    i = 0\n",
+    "    if (not proc in commonProcs.keys()):\n",
+    "        commonProcs[proc] = 0\n",
+    "        commonProcs[proc + \"_PT\"] = 0\n",
+    "    while(i + procLen < len(stu)):\n",
+    "        list1 = stu[i:i + procLen]\n",
+    "        #print(list1)\n",
+    "        str1 = stringify(list1)\n",
+    "        time = timeify(list1)\n",
+    "        if(str1 == proc):\n",
+    "            #print(\"Process:\", proc, \"String:\", str1)\n",
+    "            commonProcs[str1] += 1\n",
+    "            commonProcs[str1 + \"_PT\"] += time\n",
+    "        i+=1\n",
+    "    if(commonProcs[proc] != 0): commonProcs[proc+'_PT_R'] = commonProcs[proc+\"_PT\"]/commonProcs[proc]\n",
+    "    return commonProcs\n",
+    "\n",
+    "def stringify(acts):\n",
+    "    result = \"\"\n",
+    "    for i in acts:\n",
+    "        result = result + i[1] + \";\"\n",
+    "    return result[:-1]\n",
+    "\n",
+    "def timeify(acts):\n",
+    "    result = 0\n",
+    "    startTime = parseTime(acts[0][2])\n",
+    "    endTime = parseTime(acts[len(acts)-1][2])\n",
+    "    return (endTime-startTime).total_seconds()\n",
     "#addStats\n",
     "\n",
     "def addStats(featureData, outCSV):\n",
@@ -630,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,9 +678,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100000\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "100000\n",
+      "100000\n"
+     ]
+    }
+   ],
    "source": [
     "with open('../TrainingData/data_a_train_10.csv', newline='') as dataFile:\n",
     "    with open('../TrainingData/data_train_label.csv', newline='') as labelFile:\n",
@@ -685,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,9 +768,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100000\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "100000\n",
+      "100000\n"
+     ]
+    }
+   ],
    "source": [
     "with open('../TrainingData/data_a_train_10.csv', newline='') as dataFile:\n",
     "    dataReader = pd.read_csv(dataFile)\n",
@@ -747,9 +816,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100000\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "100000\n",
+      "100000\n"
+     ]
+    }
+   ],
    "source": [
     "with open('../TrainingData/data_a_train_10.csv', newline='') as dataFile:\n",
     "    dataReader = pd.read_csv(dataFile)\n",
@@ -778,9 +864,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100000\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "100000\n",
+      "100000\n"
+     ]
+    }
+   ],
    "source": [
     "with open('../TrainingData/data_a_train_10.csv', newline='') as dataFile:\n",
     "    dataReader = pd.read_csv(dataFile)\n",
@@ -809,9 +912,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../TrainingData/scrape1_T10\n",
+      "../TrainingData/scrape1_T20\n",
+      "../TrainingData/scrape1_T30\n",
+      "../TrainingData/scrape1_H10\n",
+      "../TrainingData/scrape1_H20\n",
+      "../TrainingData/scrape1_H30\n"
+     ]
+    }
+   ],
    "source": [
     "concatAllScrapes('T10','FullScrapeT10.csv')\n",
     "concatAllScrapes('T20','FullScrapeT20.csv')\n",
@@ -823,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,15 +957,17 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "authors": [
-    {
-     "name": "Nathan Levin"
-    }
-   ],
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
